@@ -7,8 +7,12 @@ export DH_VERBOSE = 1
 	dh $@
 
 override_dh_auto_install:
+	# Skip make install, we'll use dh_install instead
+	# (This prevents installing to /usr/local/bin)
+
+override_dh_install:
 	# Install files from debian/install
-	dh_auto_install
+	dh_install
 	# Rename apt-mirror.py to apt-mirror
 	mv debian/apt-mirror/usr/bin/apt-mirror.py debian/apt-mirror/usr/bin/apt-mirror || true
 	# Create base directories
