@@ -8,14 +8,19 @@
   * Improve progress reporting with real-time speed, ETA, and percentage
   * Enhance error handling with detailed error messages and context
   * Improve postmirror script execution with better error checking (fixes #196)
+  * Implement cleanup functionality with three modes: "off", "on" (generate clean.sh), "auto" (automatic), and "both" (for testing)
+  * Fix issue #198: Use checksums to verify existing files before downloading
+  * Fix issue #199: Verify file completeness using checksums before parsing
+  * Fix issue #193: Improve Release file downloading with better error handling
   * All dependencies available in Debian/Ubuntu repositories (python3-aiohttp, xdelta3)
   * Maintain full backward compatibility with existing mirror.list configuration
   * Use asyncio.to_thread() for file I/O to avoid blocking operations
   * Support hardlink-aware file copying with improved unlink handling
   * Better handling of by-hash directory downloads
-  * Improved Release file parsing with support for all hash types
+  * Improved Release file parsing with support for all hash types (fixes #197)
   * Enhanced documentation with reST-formatted docstrings
   * Add comprehensive Debian packaging support
+  * Add systemd service and timer files to Debian package
 
 0.5.4 (2017-05-29)
   * Add limit_rate to example mirror.list (fixes #72)
